<resources>
    <string name="app_name">App2</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="editText">Ingrese algo</string>
    <string name="boton">Cambiar!</string>
    <string name="botonN">Otro cambio!</string>
    <string name="reset">Reset!</string>
    <string name="mensaje">Escriba algo y aprete los botones</string>
    <string name="botonT">Lanzar Toast!</string>
    <string name="botonA">Crear Nueva Actividad!</string>
    <string name="botonS">Muestra Sensor</string>
    <string name="botonLV">List View</string>
    <string name="title_activity_maps">Map</string>
</resources>
