<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mecha.app2.ChangeTitleActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3mm"
        android:layout_marginTop="3mm"
        android:text="@string/mensaje"
        android:textColor="#000000"
        android:textSize="25dp"/>
    
    <TextView
        android:id="@+id/ttc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vamos a cambiar algo!"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginBottom="7dp"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:gravity="center">
        <Button
            android:id="@+id/botonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton"
            android:layout_weight="0.3"
            android:onClick="cambiarTexto"/>
        <Button
            android:id="@+id/botonC2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonN"
            android:layout_weight="0.16"
            android:onClick="otroCambio"
            />

        <Button
            android:id="@+id/botonR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/reset"
            android:onClick="reset"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        />


</LinearLayout>
